--- a/Recipe_App/index.html
+++ b/Recipe_App/index.html
@@ -23,7 +23,7 @@
                 <!-- <div class="item">
                     <img src="image/img1.jpg" alt="">
                     <div class="flex-container">
-                        <h1 class="title">This id a recipe</h1>
+                        <h1 class="title">This is a recipe</h1>
                         <a class="view-button" href="#">View Recipe</a>                      
                     </div>
                     <p class="item-data">Calories: 120</p>
